--- a/html.html
+++ b/html.html
@@ -19,6 +19,7 @@
         </nav>
         <main class="content">
             <h1>Html</h1>
+            <h3><a href="Brown Bear.html"</h3>
         </main>
     </div>
 </body>
