--- a/html.html
+++ b/html.html
@@ -19,7 +19,7 @@
         </nav>
         <main class="content">
             <h1>Html</h1>
-            <h3 a href="Brown Bear.html">Brown Bear</h3>
+            <h3 href="Brown Bear.html">Brown Bear</h3>
         </main>
     </div>
 </body>
